# container-collection

./: .buildinfo  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  Makefile  README.md  changelog.html  container_collection.batch.check_batch_job.html  container_collection.batch.get_batch_logs.html  container_collection.batch.html  container_collection.batch.make_batch_job.html  container_collection.batch.register_batch_job.html  container_collection.batch.submit_batch_job.html  container_collection.batch.terminate_batch_job.html  container_collection.docker.check_docker_job.html  container_collection.docker.clean_docker_job.html  container_collection.docker.create_docker_volume.html  container_collection.docker.get_docker_logs.html  container_collection.docker.html  container_collection.docker.make_docker_job.html  container_collection.docker.remove_docker_volume.html  container_collection.docker.run_docker_command.html  container_collection.docker.submit_docker_job.html  container_collection.docker.terminate_docker_job.html  container_collection.fargate.check_fargate_task.html  container_collection.fargate.html  container_collection.fargate.make_fargate_task.html  container_collection.fargate.register_fargate_task.html  container_collection.fargate.submit_fargate_task.html  container_collection.fargate.terminate_fargate_task.html  container_collection.html  container_collection.jobs.find_missing_conditions.html  container_collection.jobs.generate_input_contents.html  container_collection.jobs.html  container_collection.manifest.filter_manifest_files.html  container_collection.manifest.find_missing_conditions.html  container_collection.manifest.html  container_collection.manifest.summarize_manifest_files.html  container_collection.manifest.update_manifest_contents.html  (+12 more)
_coverage/: d_86fa2d9e2c643d56___init___py.html  d_86fa2d9e2c643d56_check_docker_job_py.html  d_86fa2d9e2c643d56_clean_docker_job_py.html  d_86fa2d9e2c643d56_create_docker_volume_py.html  d_86fa2d9e2c643d56_get_docker_logs_py.html  d_86fa2d9e2c643d56_make_docker_job_py.html  d_86fa2d9e2c643d56_remove_docker_volume_py.html  d_86fa2d9e2c643d56_run_docker_command_py.html  d_86fa2d9e2c643d56_submit_docker_job_py.html  d_86fa2d9e2c643d56_terminate_docker_job_py.html  d_8e4121d25e572ce3___init___py.html  d_8e4121d25e572ce3___main___py.html  d_baf86ce7eb42ba84___init___py.html  d_baf86ce7eb42ba84_check_fargate_task_py.html  d_baf86ce7eb42ba84_make_fargate_task_py.html  d_baf86ce7eb42ba84_register_fargate_task_py.html  d_baf86ce7eb42ba84_submit_fargate_task_py.html  d_baf86ce7eb42ba84_terminate_fargate_task_py.html  d_c1add5b64084b3f5___init___py.html  d_c1add5b64084b3f5_generate_input_contents_py.html  d_d18a1dfc0773c963___init___py.html  d_d18a1dfc0773c963_filter_manifest_files_py.html  d_d18a1dfc0773c963_find_missing_conditions_py.html  d_d18a1dfc0773c963_summarize_manifest_files_py.html  d_d18a1dfc0773c963_update_manifest_contents_py.html  d_e6da0cb807b17755___init___py.html  d_e6da0cb807b17755_check_batch_job_py.html  d_e6da0cb807b17755_get_batch_logs_py.html  d_e6da0cb807b17755_make_batch_job_py.html  d_e6da0cb807b17755_register_batch_job_py.html  d_e6da0cb807b17755_submit_batch_job_py.html  d_e6da0cb807b17755_terminate_batch_job_py.html  index.html  status.json
_modules/: index.html
_sources/: container_collection.batch.check_batch_job.rst.txt  container_collection.batch.get_batch_logs.rst.txt  container_collection.batch.make_batch_job.rst.txt  container_collection.batch.register_batch_job.rst.txt  container_collection.batch.rst.txt  container_collection.batch.submit_batch_job.rst.txt  container_collection.batch.terminate_batch_job.rst.txt  container_collection.docker.check_docker_job.rst.txt  container_collection.docker.clean_docker_job.rst.txt  container_collection.docker.create_docker_volume.rst.txt  container_collection.docker.get_docker_logs.rst.txt  container_collection.docker.make_docker_job.rst.txt  container_collection.docker.remove_docker_volume.rst.txt  container_collection.docker.rst.txt  container_collection.docker.run_docker_command.rst.txt  container_collection.docker.submit_docker_job.rst.txt  container_collection.docker.terminate_docker_job.rst.txt  container_collection.fargate.check_fargate_task.rst.txt  container_collection.fargate.make_fargate_task.rst.txt  container_collection.fargate.register_fargate_task.rst.txt  container_collection.fargate.rst.txt  container_collection.fargate.submit_fargate_task.rst.txt  container_collection.fargate.terminate_fargate_task.rst.txt  container_collection.jobs.find_missing_conditions.rst.txt  container_collection.jobs.generate_input_contents.rst.txt  container_collection.jobs.rst.txt  container_collection.manifest.filter_manifest_files.rst.txt  container_collection.manifest.find_missing_conditions.rst.txt  container_collection.manifest.rst.txt  container_collection.manifest.summarize_manifest_files.rst.txt  container_collection.manifest.update_manifest_contents.rst.txt  container_collection.rst.txt  container_collection.template.generate_input_contents.rst.txt  container_collection.template.rst.txt  modules.rst.txt
_static/: documentation_options.js
_summary/: container_collection.batch.check_batch_job.html  container_collection.batch.get_batch_logs.html  container_collection.batch.html  container_collection.batch.make_batch_job.html  container_collection.batch.register_batch_job.html  container_collection.batch.submit_batch_job.html  container_collection.batch.terminate_batch_job.html  container_collection.docker.check_docker_job.html  container_collection.docker.clean_docker_job.html  container_collection.docker.create_docker_volume.html  container_collection.docker.get_docker_logs.html  container_collection.docker.html  container_collection.docker.make_docker_job.html  container_collection.docker.remove_docker_volume.html  container_collection.docker.run_docker_command.html  container_collection.docker.submit_docker_job.html  container_collection.docker.terminate_docker_job.html  container_collection.fargate.html  (+12 more)
(+164 files in other folders)
