[tool.poetry]
name = "container-collection"
version = "0.4.7"
description = "Collection of tasks for running containerized models."
authors = [
    "Jessica S. Yu <jesyu@uw.edu>"
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.8.2"
boto3 = "^1.24.59"
numpy = "^1.24.2"
pandas = "^1.5.3"
docker = "^6.0.1"
deepdiff = "^5.8.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.971"
pylint = "^2.16.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-subtests = "^0.8.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.2.0"
sphinx_mdinclude = "^0.5.3"
tox = "^3.26.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
